feat: basic implementation of task
